# vibeauth

./: .env.example  .gitignore  README.md  example.py  main.py  pyproject.toml
.github/workflows/: ci.yml
lma/: config.py  handlers.py  main.py  prompts.py  templates.py  utils.py
tests/: test_main.py
vibecheck/: main.py  prompts.py
